<resources>
    <string name="app_name" translatable="false">DEBATAZO</string>
    <!--ACTIVITY PRINCIPAL-->
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="publicar">Publicar</string>
    <string name="principal">Principal</string>
    <string name="debate">Debate</string>
    <string name="valoracion">Valoración</string>
    <string name="usuario">Usuario</string>
    <string name="actividadP_floatingAB_layoutA" translatable="false"><![CDATA[@id/aPrincipal_bottomAB]]></string>

    <!--    Registro ,login..   -->
    <string name="pista_email" translatable="false">Email</string>
    <string name="pista_contrasenia">Contraseña</string>
    <string name="pista_repetir_contrasenia">Repetir Contraseña</string>
    <string name="accion_inicia_sesion">Inicia sesión</string>
    <string name="accion_inicia_sesion_corto">Inicia sesión</string>
    <string name="bienvenido">Bienvenido </string>
    <string name="invalido_email_usuario">Email inválido!</string>
    <string name="invalido_contrasenia">La longitud debe ser mayor de 5 y menor de 20.</string>
    <string name="error_registrar_contrasenia">Error! La contraseña no coincide</string>
    <string name="terminos_condiciones">He leído y acepto los términos y condiciones de uso</string>
    <string name="registrar">Registrar</string>
    <string name="recordar">Recordar</string>
    <string name="olvidado_su_contrasenia">¿Has olvidado su contraseña?</string>
    <string name="no_tener_cuenta">¿No tienes una cuenta?</string>
    <string name="registrate">Registrate</string>

    <!--    LOGIN ViewModel   -->
    <string name="inicia_sesion_fallido">Error inesperado al inicia sesión.</string>
    <string name="inicia_sesion_fallido_por_error_emailcontra">Email o contraseña incorrecto.</string>
    <!--    contentDescription -->
    <string name="boton_volver">Botón volver</string>
    <!--    DETALLE DEBATE-->
    <string name="boton_seguir">Seguir</string>
    <string name="introduce_comentario">Introduce tu comentario</string>

    <!--    DATOS PERSONAL-->
    <string name="limite_numerico_inicio" translatable="false">0/100</string>
    <string name="limite_numerico" translatable="false">%d/100</string>
    <string name="sin_rellenar">Sin rellenar</string>
    <string name="actualizar_fallido">Error inesperado al actualizar, intente de nuevo más tarde.</string>

    <!--    Sugerencia-->
    <string name="limite_numerico_inicio_desplegableS" translatable="false">0/250</string>
    <string name="limite_numerico_desplegableS" translatable="false">%d/250</string>
    <string name="boton_enviar">Enviar</string>
    <string name="confirmacion_envio">Confirmación</string>
    <string name="mensaje_confirmacion_sugerencia">¿Estás seguro de enviar esta sugerencia?</string>

    <!--    Configuracion   -->
    <string name="no">No</string>
    <string name="si">Sí</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>
    <string name="mensaje_cerrar_sesion">¿Estás seguro de que deseas cerrar sesión?</string>
    <string name="poltica_de_privacidad">Política de Privacidad</string>
    <string name="configuracion">Configuración</string>
    <string name="privacidad">Privacidad</string>
    <string name="brillo">Brillo</string>
    <string name="seguir_sistema">Seguir Sistema</string>

    <!--SUGERENCIA-->
    <string name="sugerencia">Sugerencia</string>
    <string name="sugerencia_hint">Escribe aquí cualquier sugerencia, observación, aviso etc.</string>

    <!--    PERFIL FRAGMENT-->
    <string name="conectar_ahora">Conectar ahora</string>
    <string name="mensaje_campo_id_usuario">Desbloquea todas las funciones y disfruta de la experiencia completa</string>
    <string name="sugerencia_mensaje">¡Mejora tu experiencia!  Danos tu opinión para mejorar nuestra app.</string>

    <!--PUBLICACION-->
    <string name="publicacion">Publicación</string>
    <string name="publicacion_titulo">Introducir título</string>
    <string name="publicacion_descripcion">Introducir descripción(250 letras)</string>
    <string name="publicacion_titulo_a_favor">Título a favor</string>
    <string name="publicacion_titulo_en_contra">Título en contra</string>

    <!--DATOS PERSONAL-->
    <string name="seleccionar_fecha_de_nacimiento">Seleccionar fecha de nacimiento</string>
    <string name="datos_personal">Datos personal</string>
    <string name="id">Id</string>
    <string name="nombre_usuario">Nombre usuario</string>
    <string name="nombre_personal">Nombre personal</string>
    <string name="fecha_nacicmiento">Fecha nacimiento</string>
    <string name="sexo">Sexo</string>
    <string name="descripcion_personal">Descripción personal</string>
    <string name="descripcion_personal_hint">Haz clic para rellenar tu perfil con aficiones, estilo de vida, etc.</string>
    <string name="guardar">Guardar</string>

    <!-- Comentario -->
    <string name="mostrar_mas"><u>Mostrar más</u></string>
    <string name="comentarios">Comentarios</string>
    <string name="responder"> responde </string>

    <!-- Debate detalle -->
    <string name="corazon_meGusta">Corazón Me Gusta</string>
    <string name="enviar">Enviar</string>
    <string name="a_favor"> A Favor&#160;</string>
    <string name="en_contra">En Contra&#160;</string>

    <!-- Otros -->
    <string name="campos_obligatorios">Todos los campos son obligatorios</string>
    <string name="iniciar_sesision">Se necesita inciarlizar la sesión</string>
    <string name="total_votado"> Total Votado:&#160;</string>
    <string name="cargando">Cargando</string>
    <string name="no_mas_elementos">No hay más elementos para cargar</string>
    <string name="introduce_algo"> Introduce algo</string>
    <string name="volver">Volver</string>
    <string name="logo">Logo</string>
    <string name="cambiar_contrase_a">Cambiar contraseña</string>
    <string name="imagen_like">Imagen like de forma corazón</string>
    <string name="imagen_comentario">Imagen comentario</string>
    <string name="mis_interacciones">Mis Interacciones</string>
    <string name="debate_publicado">Debate\nPublicado</string>
    <string name="debate_respondido">Debate\nRespondido</string>
    <string name="debate_gustado">Debate\nGustado</string>
    <string name="cambiar_contrasenia">Cambiar Contraseña</string>
    <string name="contrasenia_nueva">Contraseña nueva</string>
    <string name="confirmar">Confirmar</string>
    <string name="perfil_actualizado_con_xito">Perfil actualizado con éxito.</string>

    <string name="advertencia">Advertencia</string>
    <string name="error">Error</string>
    <string name="conexion_fallido">Conexión fallido</string>
    <string name="error_desconocido">Error desconocido</string>
    <string name="necesita_permiso"> Se necesita permiso</string>
    <string name="necesita_permiso_galeria"> Se necesita ir al configuración para concede el permiso de abrir galería</string>
    <string name="ir_configuracion"> Ir A Configuración </string>
    <string name="todavia_no_has_publicado_ningun_debate">Todavía No Has Publicado Ningún Debate</string>
    <string name="todavia_no_has_comentado_ningun_debate">Todavía No Has Comentado Ningún Debate</string>
    <string name="todavia_no_has_gustado_ningun_debate">Todavía No Has Gustado Ningún Debate</string>
</resources>