<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menuB_principal"
        android:checkable="false"
        android:enabled="false"
        android:icon="@drawable/principal"
        android:title="@string/principal"
        android:visible="false" />

    <item
        android:id="@+id/menuB_debate"
        android:icon="@drawable/debate"
        android:checked="true"
        android:title="@string/debate" />

    <item
        android:enabled="false"
        android:title="" />

    <item
        android:id="@+id/menuB_valoracion"
        android:checkable="false"
        android:enabled="false"
        android:icon="@drawable/valoracion"
        android:title="@string/valoracion"
        android:visible="false" />
    <item
        android:id="@+id/menuB_usuario"
        android:icon="@drawable/usuario"
        android:title="@string/usuario" />

</menu>