<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".usuario.registrar.ActividadRegistrar">

    <ImageView
        android:id="@+id/aRegistrar_imageV_logoAplicacion"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:src="@mipmap/aplicacion_logo_round"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/logo" />

    <TextView
        android:id="@+id/aRegistrar_textV_nombreAplicacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:fontFamily="@font/designer"
        android:paddingTop="5dp"
        android:text="@string/app_name"
        android:textColor="?attr/colorPrimary"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="@+id/aRegistrar_imageV_logoAplicacion"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="@+id/aRegistrar_imageV_logoAplicacion"
        app:layout_constraintTop_toBottomOf="@+id/aRegistrar_imageV_logoAplicacion" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/aRegistrar_textIL_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/pista_email"
        app:boxBackgroundColor="@color/white"
        app:boxBackgroundMode="outline"
        app:endIconTint="@color/azul_marino"
        app:helperText="Introducir el email"

        app:helperTextEnabled="true"
        app:helperTextTextColor="@color/azul_marino"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aRegistrar_textV_nombreAplicacion"
        app:startIconDrawable="@drawable/email"
        app:startIconTint="@color/azul_marino">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/trasparente"
            android:inputType="textEmailAddress"
            android:textSize="18sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/aRegistrar_textIL_contrasenia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/pista_contrasenia"
        app:boxBackgroundColor="@color/white"

        app:boxBackgroundMode="outline"
        app:counterEnabled="true"

        app:counterMaxLength="20"
        app:endIconTint="@color/azul_marino"

        app:errorTextColor="@color/red"
        app:errorEnabled="true"

        app:helperText="Introducir la contraseña"
        app:helperTextEnabled="true"
        app:helperTextTextColor="@color/azul_marino"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.842"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aRegistrar_textIL_email"
        app:startIconDrawable="@drawable/contrasenia"
        app:startIconTint="@color/azul_marino"
        tools:ignore="MissingConstraints">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textVisiblePassword"
            android:backgroundTint="@android:color/transparent"
            android:textSize="18sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/aRegistrar_textIL_repetirContrasenia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/pista_repetir_contrasenia"
        android:outlineSpotShadowColor="@color/purple_200"

        app:boxBackgroundColor="@color/white"
        app:boxBackgroundMode="outline"
        app:counterEnabled="true"
        app:counterMaxLength="20"

        app:endIconTint="@color/azul_marino"
        app:errorEnabled="true"
        app:errorTextColor="@color/red"
        app:helperText="Repitir la contraseña"
        app:helperTextEnabled="true"

        app:helperTextTextColor="@color/azul_marino"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aRegistrar_textIL_contrasenia"
        app:startIconDrawable="@drawable/contrasenia"
        app:startIconTint="@color/azul_marino">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@android:color/transparent"
            android:inputType="textVisiblePassword"
            android:textSize="18sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/aRegistrar_checkB_terminosYCondiciones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_weight="1"
        android:buttonTint="?attr/colorPrimary"
        android:text="@string/terminos_condiciones"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/aRegistrar_textIL_repetirContrasenia"
        tools:layout_editor_absoluteX="16dp" />

    <Button
        android:id="@+id/aRegistrar_button_registrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="40dp"
        android:enabled="false"
        android:text="@string/registrar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/aRegistrar_progressB_cargando"
        style="?android:attr/progressBarStyle"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:indeterminateTint="@color/azul_marino"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>