<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".usuario.interaccion.ActividadMisInteraccion">

    <ProgressBar
        android:id="@+id/aMInteraccion_progressB"
        style="?android:attr/progressBarStyle"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:indeterminate="true"
        android:indeterminateTint="@color/azul_marino"
        android:indeterminateTintMode="src_atop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/aMInteraccui_textV_noElemento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textAlignment="center"
        android:textSize="20sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/aMInteraccion_linearL_principal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/aMInteraccion_linearL_principal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/aMInteraccion_linearL_titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/aMInteraccion_limageB_volver"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@color/trasparente"
                android:contentDescription="@string/boton_volver"
                android:src="@drawable/flecha_volver"
                app:tint="?attr/colorOnSurface" />

            <TextView
                android:id="@+id/aMInteraccion_textV_titulo"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingTop="10dp"
                android:text="@string/mis_interacciones"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/aMInteraccion_linearL_selecciones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/aMInteraccion_textV_debateP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="3dp"
                android:text="@string/debate_publicado"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/aMInteraccion_textV_debateR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="3dp"
                android:text="@string/debate_respondido"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/aMInteraccion_textV_debateG"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="3dp"
                android:text="@string/debate_gustado"
                android:textAlignment="center" />

        </LinearLayout>

        <TextView
            android:id="@+id/aMInteraccion_textV_border"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@drawable/borde_logo" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/aMInteraccion_recyclerV_contenidos"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

        </androidx.recyclerview.widget.RecyclerView>

        <TextView
            android:id="@+id/aMInteraccion_textV_carga"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#B5AEAE"
            android:paddingStart="15dp"
            android:paddingTop="2dp"
            android:paddingEnd="15dp"
            android:paddingBottom="2dp"
            android:textAlignment="center"
            android:textColor="#424242"
            android:textSize="16sp"
            android:visibility="gone" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>