<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/desplegableMM_linearL_principal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="5dp"
    android:paddingTop="5dp"
    android:paddingEnd="5dp"
    android:paddingBottom="2dp">

    <LinearLayout
        android:id="@+id/desplegableMM_linearL_cabecera"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/desplegableMM_imageB_volver"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/trasparente"
            android:contentDescription="@string/boton_volver"
            app:srcCompat="@drawable/flecha_volver" />

        <TextView
            android:id="@+id/desplegableMM_textView_titulo"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingTop="10dp"
            android:text="@string/comentarios"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/desplegableMM_linearL_usuario"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/desplegableMM_imageC_usuario"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/usuario"
            app:shapeAppearanceOverlay="@style/redondearImageView" />

        <TextView
            android:id="@+id/desplegableMM_textV_nombre"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="16sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/desplegableMM_textV_descripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="50dp"
        android:paddingEnd="5dp"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/desplegableMM_textV_borderU"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/borde_logo" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/desplegableMM_recyclerV_comentarios"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <LinearLayout
        android:id="@+id/desplegableMM_linearL_comentarios"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:orientation="horizontal"
        android:paddingStart="10dp"
        android:paddingTop="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/desplegableMM_editT_entrada"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:background="@drawable/borde_comentario"
            android:ems="10"
            android:hint="@string/introduce_comentario"
            android:importantForAutofill="no"
            android:inputType="text|textMultiLine"
            android:minHeight="48dp"
            android:paddingStart="10dp"
            android:paddingEnd="5dp" />

        <Button
            android:id="@+id/desplegable_bt_enviar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#3ABC01"
            android:text="@string/enviar"
            android:textColor="#FFFFFF"
            android:textSize="14sp"
            android:visibility="visible" />

    </LinearLayout>

</LinearLayout>